fix(bench): add JNI/Panama runtime parameterization to benchmarks
Add @Param({"JNI", "PANAMA"}) annotations and WasmRuntimeFactory usage
to 8 benchmarks that were previously only testing the default runtime:

- ExecutionControlBenchmark
- GlobalOperationsBenchmark
- BulkMemoryPatternBenchmark
- BulkMemoryOperationsBenchmark
- BulkMemoryThroughputBenchmark
- SimdOptimizationBenchmark
- SharedMemoryBenchmark
- PoolingAllocatorPerformanceBenchmark

Each benchmark now:
- Uses WasmRuntimeFactory.create(type) instead of Engine.create()
- Properly closes the runtime in teardown
- Includes --enable-native-access=ALL-UNNAMED in Fork JVM args